--- a/modules-ui/resources/src/main/res/values/label.strings.xml
+++ b/modules-ui/resources/src/main/res/values/label.strings.xml
@@ -4,4 +4,5 @@
     <string name="label_network_connection_yes">Network Connected</string>
     <string name="label_log_out">Log Out</string>
     <string name="label_delete_account">Delete Account</string>
+    <string name="label_notifications">Notifications</string>
 </resources>
