--- a/modules-ui/resources/src/main/res/values/label.strings.xml
+++ b/modules-ui/resources/src/main/res/values/label.strings.xml
@@ -5,4 +5,5 @@
     <string name="label_log_out">Log Out</string>
     <string name="label_delete_account">Delete Account</string>
     <string name="label_notifications">Notifications</string>
+    <string name="label_no_notifications">No Notifications</string>
 </resources>
