Adds a Teams string in the resource

--- a/modules-ui/resources/src/main/res/values/label.strings.xml
+++ b/modules-ui/resources/src/main/res/values/label.strings.xml
@@ -6,6 +6,7 @@
     <string name="label_delete_account">Delete Account</string>
     <string name="label_notifications">Notifications</string>
     <string name="label_no_notifications">No Notifications</string>
+    <string name="teams">Teams</string>
 
     <string name="label_issues">Issues</string>
 </resources>
